Project

General

Profile

Actions

Bug #39595

closed

Compile error: ceph-dencoder: invalid operands (*UND* and .gcc_except_table sections) for `-'

Added by Sebastian Wagner almost 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
build
Target version:
-
% Done:

0%

Source:
Development
Tags:
QA
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

https://shaman.ceph.com/builds/ceph/master/1991495a22fa74210348ffd4f261c314ef3f056c/notcmalloc/152091/

https://jenkins.ceph.com/job/ceph-dev-build/ARCH=x86_64,AVAILABLE_ARCH=x86_64,AVAILABLE_DIST=centos7,DIST=centos7,MACHINE_SIZE=huge/25093//consoleFull

[ 90%] Building CXX object src/tools/ceph-dencoder/CMakeFiles/ceph-dencoder.dir/ceph_dencoder.cc.o
{standard input}: Assembler messages:
{standard input}:1923894: Error: invalid operands (*UND* and .gcc_except_table sections) for `-'
{standard input}:1923897: Error: invalid operands (*UND* and .gcc_except_table sections) for `-'
c++: fatal error: Killed signal terminated program cc1plus
compilation terminated.
make[2]: *** [src/tools/ceph-dencoder/CMakeFiles/ceph-dencoder.dir/ceph_dencoder.cc.o] Error 1
make[1]: *** [src/tools/ceph-dencoder/CMakeFiles/ceph-dencoder.dir/all] Error 2
make: *** [all] Error 2
error: Bad exit status from /var/tmp/rpm-tmp.I0VnuO (%build)

RPM build errors:
    Bad exit status from /var/tmp/rpm-tmp.I0VnuO (%build)
Finished: FAILURE

Related issues 1 (0 open1 closed)

Has duplicate Ceph - Bug #38629: ceph_dencoder.cc: c++: internal compiler error: Killed (program cc1plus)ClosedBrad Hubbard

Actions
Actions #1

Updated by Sebastian Wagner almost 5 years ago

https://shaman.ceph.com/builds/ceph/wip-swagner-testing/ba62bd3d05ca49931f12a47b26a97fa5cc9a5c11/default/152094/

https://jenkins.ceph.com/job/ceph-dev-new-build/ARCH=x86_64,AVAILABLE_ARCH=x86_64,AVAILABLE_DIST=centos7,DIST=centos7,MACHINE_SIZE=huge/19780//consoleFull

{standard input}: Assembler messages:
{standard input}:1827434: Warning: end of file not at end of a line; newline inserted
{standard input}: Error: open CFI at the end of file; missing .cfi_endproc directive
c++: fatal error: Killed signal terminated program cc1plus
compilation terminated.
make[2]: *** [src/tools/ceph-dencoder/CMakeFiles/ceph-dencoder.dir/ceph_dencoder.cc.o] Error 1
make[1]: *** [src/tools/ceph-dencoder/CMakeFiles/ceph-dencoder.dir/all] Error 2
Actions #2

Updated by Sebastian Wagner almost 5 years ago

  • Priority changed from Normal to Urgent

https://shaman.ceph.com/builds/ceph/master/55d5ed4f770e554460624dd3480076f5f7ecf924/notcmalloc/152186/

https://jenkins.ceph.com/job/ceph-dev-build/ARCH=x86_64,AVAILABLE_ARCH=x86_64,AVAILABLE_DIST=centos7,DIST=centos7,MACHINE_SIZE=huge/25121//consoleFull

{standard input}: Assembler messages:
{standard input}:1519582: Warning: end of file not at end of a line; newline inserted
{standard input}: Error: open CFI at the end of file; missing .cfi_endproc directive
c++: fatal error: Killed signal terminated program cc1plus
compilation terminated.
make[2]: *** [src/tools/ceph-dencoder/CMakeFiles/ceph-dencoder.dir/ceph_dencoder.cc.o] Error 1
make[1]: *** [src/tools/ceph-dencoder/CMakeFiles/ceph-dencoder.dir/all] Error 2
Actions #4

Updated by Kefu Chai almost 5 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Kefu Chai
  • Pull request ID set to 28359
Actions #5

Updated by Kefu Chai almost 5 years ago

  • Has duplicate Bug #38629: ceph_dencoder.cc: c++: internal compiler error: Killed (program cc1plus) added
Actions #6

Updated by Kefu Chai almost 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF